openbank-infra/gitops/components/psd2-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: psd2
  labels:
    openbank.io/plane: app
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
